# summer_school_XAI

./: .gitignore  README.md  part1.ipynb  part3.ipynb
configs/hydra/: default.yaml
part2/hydra_configs/: task2.yaml  task3.yaml
part2/patch-camelyon/: pyproject.toml
part2/patch-camelyon/.devcontainer/: devcontainer.json
part2/patch-camelyon/patch_camelyon/data/datasets/: patch_camelyon.py
part2/patch-camelyon/patch_camelyon/modeling/backbone/: __init__.py  resnet18.py
summer_school_XAI/: part1.ipynb:Zone.Identifier  part3.ipynb:Zone.Identifier  part4.ipynb:Zone.Identifier  part5.ipynb:Zone.Identifier
summer_school_XAI/.devcontainer/: devcontainer.json
summer_school_XAI/part2/: part2.ipynb
summer_school_XAI/part2/hydra_configs/: task1.yaml
summer_school_XAI/part2/hydra_configs/task4/: default.yaml  example.py
summer_school_XAI/part2/hydra_configs/task5/: default.yaml
summer_school_XAI/part2/patch-camelyon/: README.md
summer_school_XAI/part2/patch-camelyon/patch_camelyon/: patch_camelyon_model.py
web-pb138/winary-pb138-project/: .dockerignore  .eslintrc  .gitignore  README.md  README1.md  db_erd_navrh.txt  docker-compose.yml  package-lock.json  package.json  poznamky.txt
web-pb138/winary-pb138-project/backend/: .env.delete  .eslintrc  .gitignore  .prettierrc  Dockerfile  README.md  database.sh  package.json  tsconfig.json
web-pb138/winary-pb138-project/backend/prisma/: schema.prisma
web-pb138/winary-pb138-project/backend/src/: index.ts  schemas.ts  utils.ts
web-pb138/winary-pb138-project/frontend/: Dockerfile  index.html  package.json
(+194 files in other folders)
